Added Hyperlink and Image for Yakisoba

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="/img/yakisoba.jpg">
+        <a href="recipes/yakisoba.html">Yakisoba</a>
     </body>
 </html>
