Added description and brief explanation for recipe

--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Yakisoba</h1>
-    
+    <img src="../img/yakisoba.jpg" alt="Picture of Yakisoba" width="500" height="400" style="display:block">
+        <p>Yakisoba is a classic Japanese stir-fried noodle dish that's seasoned with a sweet and savory sauce similar to Worcestershire sauce</p>
+
 </body>
 </html>
