Added recipe ingredient list

--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -6,8 +6,19 @@
 </head>
 <body>
     <h1>Yakisoba</h1>
-    <img src="../img/yakisoba.jpg" alt="Picture of Yakisoba" width="500" height="400" style="display:block">
+    <img src="../img/yakisoba.jpg" alt="Picture of Yakisoba" width="500" height="400">
         <p>Yakisoba is a classic Japanese stir-fried noodle dish that's seasoned with a sweet and savory sauce similar to Worcestershire sauce</p>
-
-</body>
+        <p lang="jp">Perhaps one of Japan's best-known street foods, Yakisoba (焼きそば) literally means “grilled noodles.” 
+            It's thought to have originated from Chinese cuisine and became a popular fast-food meal in the black markets that popped up around Japan after the war. 
+            In an era when food was in short supply, and the country was busy rebuilding, the basic ingredients needed to make yakisoba, and the possibility of preparing it on large steel griddles called a teppan (鉄板), made it ideally suited for these makeshift outdoor markets.</p>
+        <p>Yakisoba is a classic Japanese street food made by stir-frying vegetables, meat and noodles with a sweet and savory sauce. My version retains the taste of authentic Yakisoba but adapts the technique and ingredients for non-Japanese kitchens.</p>
+           <h3><strong>Ingredients</strong></h3>
+               <ul>
+                <li>230 grams fresh yellow noodles <sub>(such as ramen)</sub></li>
+                <li>2 teaspoons vegetable oil</li>
+                <li>100 grams pork belly <sub>or bacon, thinly sliced & chopped)</sub>(</li>
+                <li>100 grams onion <sub>(~1/2 small onion, sliced)</sub></li>
+                <li>100 grams cabbage <sub>(~2 leaves, chopped)</sub></li>
+               </ul>
+    </body>
 </html>
