--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -16,9 +16,18 @@
                <ul>
                 <li>230 grams fresh yellow noodles <sub>(such as ramen)</sub></li>
                 <li>2 teaspoons vegetable oil</li>
-                <li>100 grams pork belly <sub>or bacon, thinly sliced & chopped)</sub>(</li>
+                <li>100 grams pork belly <sub>(or bacon, thinly sliced & chopped)</sub></li>
                 <li>100 grams onion <sub>(~1/2 small onion, sliced)</sub></li>
                 <li>100 grams cabbage <sub>(~2 leaves, chopped)</sub></li>
+                <li>60 grams carrot <sub>(~1/2 carrot, julienned)</sub></li>
+                <li>2 tablespoons Worcestershire sauce</li>
+                <li>1 tablespoon ketchup</li>
+                <li>1 tablespoon oyster sauce</li>
+                <li>1/2 tablespoon honey</li>
+                <li>1/4 tablespoon white pepper</li>
+                <li>1 tablespoon vegetable oil</li>
+                <li>             Aonori (for garnish)</li>
+                <li>             Benishoga (for garnish)</li>
                </ul>
     </body>
 </html>
