--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -26,8 +26,20 @@
                 <li>1/2 tablespoon honey</li>
                 <li>1/4 tablespoon white pepper</li>
                 <li>1 tablespoon vegetable oil</li>
-                <li>             Aonori (for garnish)</li>
-                <li>             Benishoga (for garnish)</li>
+                <li>Aonori (for garnish)</li>
+                <li>Benishoga (for garnish)</li>
                </ul>
+            <h3>Instructions</h3>
+                <ol>
+                    <li><p>Boil the noodles according to the directions on the package. When the noodles are done, drain and rinse thoroughly with cold water, using your fingers to agitate the noodles. Drain as much water off the noodles as possible by using a dropping motion with both hands and yanking up suddenly. Toss the noodles with 2 teaspoons of vegetable oil to keep the noodles from sticking together.</p></li>
+                    <li><p>Prep the vegetables and make the sauce by whisking together the Worcestershire sauce, ketchup, oyster sauce, honey and white pepper in a small bowl.</p></li>
+                    <li><p>Heat a large heavy-bottomed frying pan or griddle over high heat until hot. Add 1 tablespoon of oil along with the pork belly or bacon. Fry until the fat from the pork has started to render out.</p></li>
+                    <li><p>Add the carrots, onions, and cabbage and stir fry using two spatulas until the vegetables are vibrant in color and starting to wilt (they don't need to be fully cooked through yet).</p></li>
+                    <li><p>Add noodles and toss with the oil in the pan. If you notice they are sticking, add some more oil directly onto the noodles.</p></li>
+                    <li><p>Drizzle the sauce evenly over the noodles and continue tossing and frying until the noodles are a uniform color and you can smell the sauce starts to caramelize.</p></li>
+                    <li><p>Plate the yakisoba and sprinkle with aonori and benishoga to garnish.</p></li>
+                </ol>
+                Enjoy!
     </body>
+    
 </html>
