Added Typeset on Line 42

--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -39,7 +39,7 @@
                     <li><p>Drizzle the sauce evenly over the noodles and continue tossing and frying until the noodles are a uniform color and you can smell the sauce starts to caramelize.</p></li>
                     <li><p>Plate the yakisoba and sprinkle with aonori and benishoga to garnish.</p></li>
                 </ol>
-                Enjoy!
+                <strong><em>Enjoy!</em></strong>
     </body>
     
 </html>
