Added target attribute

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src="/img/yakisoba.jpg">
-        <a href="recipes/yakisoba.html">Yakisoba</a>
+        <a href="recipes/yakisoba.html" target="_blank">Yakisoba</a>
     </body>
 </html>
