--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/yakisoba.html" target="_blank">Yakisoba</a>
+        <ul>
+        <li><a href="recipes/yakisoba.html" target="_blank">Yakisoba</a></li>
+        <li></li><a href="recipes/omuraisu.html" target="_blank">Omurice</a></li>
+        </ul>
     </body>
 </html>
