Fixed typo on Line 11

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
         <li><a href="recipes/yakisoba.html" target="_blank">Yakisoba</a></li>
-        <li></li><a href="recipes/omuraisu.html" target="_blank">Omurice</a></li>
+        <li><a href="recipes/omuraisu.html" target="_blank">Omurice</a></li>
         </ul>
     </body>
 </html>
