--- a/recipes/omuraisu.html
+++ b/recipes/omuraisu.html
@@ -32,5 +32,26 @@
                 <li>1 pinch salt</li>
                 <li>1 tablespoon butter</li>
             </ul>
+        <h3><strong>Instructions</strong></h3>
+            <h4>For Chicken Rice</h4>
+            <ol>
+                <li>Marinate the chicken in the soy sauce while you prepare all the other ingredients.</li>
+                <li>Break the eggs into a bowl along with the cream and salt. Whisk together until the mixture is uniform in color.</li>
+                <li>Add the vegetable oil and onions to a frying pan over medium-high heat and saute the onions until they're tender and just starting to brown.</li>
+                <li>Add the chicken and stir-fry until you don't see any raw sides anymore.</li>
+                <li>Add the rice, and break it up with a spatula so that it heats through evenly.</li>
+                <li>Once the rice has been warmed through, add the ketchup and oyster sauce, and stir-fry until the rice is an even color and the ketchup is just starting to caramelize. Season with black pepper to taste.</li>
+                <li>Plate the rice. You can use a bowl as a mold to give it a round or oval shape.</li>
+            </ol>    
+            <h4>For Omelette</h4>
+            <ol>
+                <li>Heat a small 8-inch non-stick frying pan over medium heat until moderately hot. Add the butter and swirl to melt and coat the pan evenly.</li>
+                <li>Add the eggs, and cook until the bottom layer of eggs are set (the bottom will start turning opaque).</li>
+                <li>Gently stir the eggs, while shaking the pan to resettle the uncooked egg.</li>
+                <li>Turn up the heat to high for a few seconds to make the egg easier to slide out of the pan (the egg should slide around the pan easily when shaken).</li>
+                <li>Position the pan over the plated rice and gently slide the egg out of the pan onto the rice.</li>
+                <li>Garnish with ketchup and parsley to taste.</li>
+            </ol>
+        <p><strong><em>Enjoy!</em></strong></p>
         </body>
 </html>
