--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -8,7 +8,7 @@
     <h1>Yakisoba</h1>
     <img src="../img/yakisoba.jpg" alt="Picture of Yakisoba" width="500" height="400">
         <p>Yakisoba is a classic Japanese stir-fried noodle dish that's seasoned with a sweet and savory sauce similar to Worcestershire sauce</p>
-        <p lang="jp">Perhaps one of Japan's best-known street foods, Yakisoba (焼きそば) literally means “grilled noodles.” 
+        <p lang="ja">Perhaps one of Japan's best-known street foods, Yakisoba (焼きそば) literally means “grilled noodles.” 
             It's thought to have originated from Chinese cuisine and became a popular fast-food meal in the black markets that popped up around Japan after the war. 
             In an era when food was in short supply, and the country was busy rebuilding, the basic ingredients needed to make yakisoba, and the possibility of preparing it on large steel griddles called a teppan (鉄板), made it ideally suited for these makeshift outdoor markets.</p>
         <p>My version retains the taste of authentic Yakisoba but adapts the technique and ingredients for non-Japanese kitchens.</p>
